--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.5/angular.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script src="js/splash.js"></script>
+<link rel="stylesheet" href="css/splash.css">
+
 <script type="text/javascript">
    (function(){
       emailjs.init("user_YIRPAcDCfcv1FXy8VIWX5");
