--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="emailbox">
  <img class="logo stag" src="https://firebasestorage.googleapis.com/v0/b/moves-ad1b4.appspot.com/o/MOVES_logo2.png?alt=media&token=d7dbd4a2-c866-4080-910d-ed82fafb91bb"/>
   <form onsubmit="addToDB($('#emailField').val())">
-    <div><input class="stag" id="emailField" type="text" placeholder="Type email here!" spellcheck="false"></>
+    <div><input style="width: 100%;" class="stag" id="emailField" type="text" placeholder="Type email here!" spellcheck="false"></>
     </div>
   <input type="submit" id="submitBtn" value="Get notified!" class="classyBtn stag"/>
   </form>
