--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/0.7.0/velocity.ui.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.5/angular.min.js"></script>
   <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/1.0.0/dist/progressbar.js"></script>
+  <script src="js/splash.js></script>
 <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script type="text/javascript">
@@ -29,6 +30,7 @@
 </script>
   
  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+ <link href="css/splash.css rel="stylesheet">                                                                         
   
 </head>
   <body class="bg">
