--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <!--   <button onclick="addToDB($('#emailField').val())" id="submitBtn" class="classyBtn">Get notified!</button> -->
   
-  <div class="notice stag" id="notice">hi</div>
+  <div class="notice stag" id="notice"> </div>
          <div>
       <img id="androidBadge" class="badges-md stag" src="https://firebasestorage.googleapis.com/v0/b/moves-ad1b4.appspot.com/o/google-play-badge.png?alt=media&token=b08bcf41-e4e4-4b05-b707-668cac9ad68f"/>
     
