--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <div class="emailbox">
  <img class="logo stag" src="https://firebasestorage.googleapis.com/v0/b/moves-ad1b4.appspot.com/o/MOVES_logo2.png?alt=media&token=d7dbd4a2-c866-4080-910d-ed82fafb91bb"/>
+  <div class="mini-title">Camp Yale boutta be lit.</div>
   <div id="container" class="container"></div>
   <form onsubmit="addToDB($('#emailField').val())">
     <div><input class="stag" id="emailField" type="text" placeholder="Type your Yale email here!" spellcheck="false" autocomplete"true"></>
