--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h2>Privacy Policy</h2>
-<p>Chris Moore built the MovesY app as a free app. This SERVICE is provided by Chris Moore at no cost and is intended
+<p>Chris Moore with the assistance of Gray Newfield and Owais Khan built the MovesY app as a free app. This SERVICE is provided by Chris Moore at no cost and is intended
     for use as is.</p>
 <p>This page is used to inform website visitors regarding my policies with the collection, use, and
     disclosure of Personal Information if anyone decided to use my Service.</p>
