--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
   
   <div class="notice stag" id="notice"> </div>
          <div>
-      <img id="androidBadge" href="https://play.google.com/store/apps/details?id=com.ionicframework.movesyale428225" class="badges-md stag" src="https://firebasestorage.googleapis.com/v0/b/moves-ad1b4.appspot.com/o/google-play-badge.png?alt=media&token=b08bcf41-e4e4-4b05-b707-668cac9ad68f"/>
+      <a href="https://play.google.com/store/apps/details?id=com.ionicframework.movesyale428225"><img id="androidBadge" class="badges-md stag" src="https://firebasestorage.googleapis.com/v0/b/moves-ad1b4.appspot.com/o/google-play-badge.png?alt=media&token=b08bcf41-e4e4-4b05-b707-668cac9ad68f"/></a>
     
-      <img id="iosBadge" href="https://itunes.apple.com/us/app/movesy/id1271228527" class="badges-ios stag" src="https://firebasestorage.googleapis.com/v0/b/moves-ad1b4.appspot.com/o/download-on-the-app-store.png?alt=media&token=264bce78-06c0-400c-9477-3a5e541dd903"/>
+      <a href="https://itunes.apple.com/us/app/movesy/id1271228527"><img id="iosBadge" class="badges-ios stag" src="https://firebasestorage.googleapis.com/v0/b/moves-ad1b4.appspot.com/o/download-on-the-app-store.png?alt=media&token=264bce78-06c0-400c-9477-3a5e541dd903"/></a>
       </div>   
  </div>
     </div>
