--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <input type="submit" id="submitBtn" value="Get notified!" class="classyBtn stag"/>
   </form>
 
-<!--   <button onclick="addToDB($('#emailField').val())" id="submitBtn" class="classyBtn">Get notified!</button> -->
+  <button onclick="goToDownload()" id="submitBtn" class="classyBtn">Tap to download now!</button>
   
   <div class="notice stag" id="notice"> </div>
          <div>
