--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <input type="submit" id="submitBtn" value="Get notified!" class="classyBtn stag"/>
   </form>
 
-  <a href="http://onelink.to/9tg25k"><button id="downloadBtn" class="classyBtn" style="background-color: #FFA500">Tap to download now!</button></a>
+  <a href="http://onelink.to/9tg25k"><button id="downloadBtn" class="classyBtn stag" style="background-color: #FFA500">Tap to download now!</button></a>
   
   <div class="notice stag" id="notice"> </div>
          <div>
