--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
   <input type="submit" id="submitBtn" value="Get notified!" class="classyBtn stag"/>
   </form>
 
-  <a href="http://onelink.to/9tg25k"><button id="downloadBtn" class="classyBtn stag" style="background-color: #FFA500">Tap to download now!</button></a>
+  <a href="http://onelink.to/9tg25k" target="_blank"><button id="downloadBtn" class="classyBtn stag" style="background-color: #FFA500">Tap to download now!</button></a>
   
   <div class="notice stag" id="notice"> </div>
          <div>
-      <a href="https://play.google.com/store/apps/details?id=com.ionicframework.movesyale428225"><img id="androidBadge" class="badges-md stag" src="https://firebasestorage.googleapis.com/v0/b/moves-ad1b4.appspot.com/o/google-play-badge.png?alt=media&token=b08bcf41-e4e4-4b05-b707-668cac9ad68f"/></a>
+      <a href="https://play.google.com/store/apps/details?id=com.ionicframework.movesyale428225" target="_blank"><img id="androidBadge" class="badges-md stag" src="https://firebasestorage.googleapis.com/v0/b/moves-ad1b4.appspot.com/o/google-play-badge.png?alt=media&token=b08bcf41-e4e4-4b05-b707-668cac9ad68f"/></a>
     
-      <a href="https://itunes.apple.com/us/app/movesy/id1271228527"><img id="iosBadge" class="badges-ios stag" src="https://firebasestorage.googleapis.com/v0/b/moves-ad1b4.appspot.com/o/download-on-the-app-store.png?alt=media&token=264bce78-06c0-400c-9477-3a5e541dd903"/></a>
+      <a href="https://itunes.apple.com/us/app/movesy/id1271228527" target="_blank"><img id="iosBadge" class="badges-ios stag" src="https://firebasestorage.googleapis.com/v0/b/moves-ad1b4.appspot.com/o/download-on-the-app-store.png?alt=media&token=264bce78-06c0-400c-9477-3a5e541dd903"/></a>
       </div>   
  </div>
     </div>
